--- a/index.html
+++ b/index.html
@@ -13,6 +13,148 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+    
+    <!-- Fallback Inline Styles (GitHub Pages uyumluluk) -->
+    <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        html { height: 100%; }
+        body { 
+            height: 100%; 
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background-color: #282828;
+            color: #ebdbb2;
+            display: flex;
+            flex-direction: column;
+            line-height: 1.6;
+        }
+        body.theme-light {
+            background-color: #f9f5f0;
+            color: #282828;
+        }
+        .app-header {
+            background-color: #32302f;
+            border-bottom: 1px solid #504945;
+            padding: 1.5rem;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+        .header-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .logo-section h1 { font-size: 1.8rem; font-weight: 700; margin-bottom: 0.25rem; }
+        .logo-section .app-subtitle { font-size: 0.9rem; color: #bdae93; font-weight: 400; }
+        .header-controls { display: flex; gap: 1rem; }
+        .theme-toggle-btn, .sidebar-toggle-btn {
+            background: #3c3836;
+            border: 1px solid #504945;
+            color: #ebdbb2;
+            width: 40px;
+            height: 40px;
+            border-radius: 6px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.1rem;
+        }
+        .theme-toggle-btn:hover, .sidebar-toggle-btn:hover {
+            background-color: #8ec07c;
+            color: #282828;
+            border-color: #8ec07c;
+        }
+        .app-container {
+            display: flex;
+            flex: 1;
+            gap: 0;
+            overflow: hidden;
+        }
+        .control-sidebar {
+            width: 320px;
+            background-color: #32302f;
+            border-right: 1px solid #504945;
+            overflow-y: auto;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            z-index: 200;
+        }
+        .sidebar-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1.5rem;
+            border-bottom: 1px solid #504945;
+            background-color: #32302f;
+            z-index: 10;
+        }
+        .sidebar-header h2 { font-size: 1.3rem; font-weight: 600; }
+        .sidebar-content { padding: 1.5rem; }
+        .sidebar-content > div { margin-bottom: 2.5rem; padding-bottom: 2rem; border-bottom: 1px solid #504945; }
+        .sidebar-content h3 { font-size: 0.95rem; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px; color: #8ec07c; margin-bottom: 1rem; }
+        .main-content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+            background-color: #282828;
+        }
+        .map-section {
+            flex: 1.2;
+            min-height: 60%;
+            background-color: #32302f;
+            position: relative;
+            overflow: hidden;
+            border-bottom: 2px solid #504945;
+        }
+        .map-canvas { width: 100%; height: 100%; }
+        .analytics-section {
+            flex: 0.8;
+            overflow-y: auto;
+            background-color: #282828;
+            padding: 2rem;
+            scroll-behavior: smooth;
+        }
+        .charts-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+            gap: 1.5rem;
+            margin-bottom: 2rem;
+        }
+        .chart-panel {
+            background-color: #32302f;
+            border: 1px solid #504945;
+            border-radius: 8px;
+            padding: 1.5rem;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12);
+        }
+        .panel-header { margin-bottom: 1.5rem; padding-bottom: 1rem; border-bottom: 2px solid #504945; }
+        .panel-header h3 { font-size: 1.1rem; font-weight: 600; color: #ebdbb2; margin-bottom: 0.3rem; }
+        .panel-subtitle { font-size: 0.9rem; color: #bdae93; font-weight: 400; }
+        .app-footer {
+            background-color: #32302f;
+            border-top: 1px solid #504945;
+            padding: 1rem;
+            text-align: center;
+            font-size: 0.85rem;
+            color: #bdae93;
+        }
+        @media (max-width: 768px) {
+            .control-sidebar {
+                position: fixed;
+                left: -320px;
+                top: 0;
+                bottom: 0;
+                width: 320px;
+                height: 100vh;
+                z-index: 300;
+                transition: left 300ms ease;
+            }
+            .control-sidebar.open { left: 0; }
+        }
+    </style>
+
 </head>
 <body class="theme-dark">
     <!-- Header -->
